--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@
 }
 
 .navbar-brands span {
-    font-size: 25px;
+    font-size: 24px;
     color: #fff;
     letter-spacing: 3px;
     font-weight: 550;
@@ -58,7 +58,7 @@
 .brand-name {
     display: inline-block;
     padding: 1px 6px;
-    font-size: 12px;
+    font-size: 11px;
     line-height: 15px;
     border-left: 2px solid #fff;
     color: #fff;
@@ -135,6 +135,7 @@
 .header-info .info-2 {
     font-size: 15px;
     margin-bottom: 30px;
+    width: 44%
 }
 
 .btn-primary {
@@ -182,7 +183,7 @@
 }
 
 .home-down.bounce i {
-    padding: 50px 0;
+    margin: 30px 10px 0;
     color: #fff;
     font-size: 30px
 }
@@ -876,15 +877,18 @@ select[multiple].input-lg {
     }
     /*** start header**/
     .header-info .data-info {
- padding-top: 40%;
-        padding-bottom: 20%  
+        padding-top: 50%;
+        padding-bottom: 20%
     }
     .header-info .info-1-1 {
         font-size: 15px
     }
     .header-info .info-1-2 {
-        font-size: 35px;
+        font-size: 32px;
         margin: -6px 0
+    }
+    .header-info .info-2 {
+        width: 80%
     }
     /*** start about me**/
     .my-self {
