--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 
 }
-
+body{overflow:hidden}
 button:focus {
     outline: none
 }
@@ -1029,4 +1029,77 @@ select[multiple].input-lg {
     }
 }
 
-/***End contact us***/
+/*End contact us***/
+/*start scroll top*/
+#btnUp{
+    position: fixed;
+    bottom: 30px;
+    right:15px;
+    z-index:99999;
+    background:#61305d;
+    color:#fff;
+    border:1px solid #2e282a;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    display:none;
+}
+/*end scroll top**/
+
+/*start loadscreen***/
+#loadingS{
+    position: fixed;
+    top: 0;
+    left:0;
+    right:0;
+    bottom:0;
+    z-index: 99999999999;
+    background: #201e1e;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    ;
+
+}
+.spinner {
+    width: 40px;
+    height: 40px;
+  
+    position: relative;
+  }
+  
+  .double-bounce1, .double-bounce2 {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color:#fff;
+    opacity: 0.6;
+    position: absolute;
+    top: 0;
+    left: 0;
+    
+    -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+    animation: sk-bounce 2.0s infinite ease-in-out;
+  }
+  
+  .double-bounce2 {
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+  }
+  
+  @-webkit-keyframes sk-bounce {
+    0%, 100% { -webkit-transform: scale(0.0) }
+    50% { -webkit-transform: scale(1.0) }
+  }
+  
+  @keyframes sk-bounce {
+    0%, 100% { 
+      transform: scale(0.0);
+      -webkit-transform: scale(0.0);
+    } 50% { 
+      transform: scale(1.0);
+      -webkit-transform: scale(1.0);
+    }
+  }
